# release-lab

./: .gitignore  .release-please-manifest.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml  release-please-config.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  docs.yml  release.yml  tests.yml
changelog/: index.html
chart/release-lab/: CHANGELOG.md  Chart.yaml  values.yaml
chart/release-lab/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
cli/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: cli.md  gen_ref_pages.py  index.md
docs/reference/: hello.md
license/: index.html
reference/hello/: index.html
search/: search_index.json
src/hello/: __init__.py  app.py  cli.py
tests/: test_api.py  test_cli.py  test_version.py  test_vesion.py
